kernel/tests/data/invalid/incorrect_resultant_type_1.ck
data Invalid : Prop where
  | c : Prop